--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "",
-  "version": "",
+  "name": "nick-proxy",
+  "version": "1.0.0",
   "description": "",
-  "author": "",
-  "license": "",
-  "engines": {
-    "node": ">=6.13.0"
-  },
+  "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server/index.js"
   },
-  "dependencies": {
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yelpreactor/nick-proxy.git"
   },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yelpreactor/nick-proxy/issues"
+  },
+  "homepage": "https://github.com/yelpreactor/nick-proxy#readme",
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "express": "^4.16.3",
+    "nodemon": "^1.18.4"
   }
 }
